--- a/plugins/build.properties
+++ b/plugins/build.properties
@@ -10,32 +10,17 @@
 ##
 
     #
-    # Specify the application server type.
+    # The default settings are for Tomcat. Additional settings are left
+    # commented out as examples.
     #
-    #app.server.type=geronimo
-    app.server.type=glassfish
-    #app.server.type=jboss
-    #app.server.type=jetty
-    #app.server.type=jonas
-    #app.server.type=resin
-    #app.server.type=tomcat
-    #app.server.type=weblogic
-    #app.server.type=websphere
-
-    #
-    # Specify the application server parent directory.
-    #
-    #app.server.parent.dir=${sdk.dir}/../bundles
-    app.server.parent.dir=$LIFERAY_HOME
-
     #
     # Specify the paths to an unzipped Glassfish bundle.
     #
-    app.server.glassfish.dir=${app.server.parent.dir}/glassfish-3.1.2.2
-    app.server.glassfish.deploy.dir=${app.server.glassfish.dir}/autodeploy
-    app.server.glassfish.lib.global.dir=${app.server.glassfish.dir}/domains/domain1/lib
-    app.server.glassfish.portal.dir=${app.server.glassfish.dir}/domains/domain1/applications/liferay-portal
-
+    app.server.type=glassfish
+    app.server.dir=/home/travis/liferay-portal-6.1.1-ce-ga2/glassfish-3.1.2
+    app.server.deploy.dir=/home/travis/liferay-portal-6.1.1-ce-ga2/glassfish-3.1.2/domains/domain1/autodeploy
+    app.server.lib.global.dir=/home/travis/liferay-portal-6.1.1-ce-ga2/glassfish-3.1.2/domains/domain1/lib
+    app.server.portal.dir=/home/travis/liferay-portal-6.1.1-ce-ga2/glassfish-3.1.2/domains/domain1/applications/liferay-portal
 
 ##
 ## Auto Deploy
@@ -45,7 +30,7 @@
     # Plugins will be deployed to this directory. Make sure that Liferay is
     # also set to scan this directory.
     #
-    auto.deploy.dir=${app.server.parent.dir}/deploy
+    auto.deploy.dir=${app.server.dir}/../deploy
 
     #
     # Set this to true if deployed WARs are unpacked. Set this to false your
@@ -63,28 +48,12 @@
     auto.deploy.custom.portlet.xml=false
 
 ##
-## Baseline JAR
-##
-
-    baseline.jar.bnddir.name=.bnd
-
-    baseline.jar.report.level=diff
-    #baseline.jar.report.level=off
-    #baseline.jar.report.level=persist
-    #baseline.jar.report.level=standard
-
-    baseline.jar.report.only.dirty.packages=true
-
-    baseline.jar.reports.dir.name=baseline-reports
-
-##
 ## Compiler
 ##
 
-    ant.build.javac.source=1.6
-    ant.build.javac.target=1.6
+    ant.build.javac.source=1.7
+    ant.build.javac.target=1.7
 
-    #javac.compiler=com.google.errorprone.ErrorProneAntCompilerAdapter
     #javac.compiler=modern
     javac.compiler=org.eclipse.jdt.core.JDTCompilerAdapter
 
@@ -114,20 +83,6 @@
 
     #ext.work.dir=
 
-
-##
-## JRebel
-##
-
-    #
-    # Set the directory that will be used to generate a plugin's JRebel
-    # configuraton file. Not specifying a directory means that the generated
-    # JRebel configuration file will be placed in a plugin's compiled classes
-    # output directory. This is also the directory that JRebel will use to look
-    # for updated classes.
-    #
-    #jrebel.plugin.classes.dir=
-
 ##
 ## JUnit
 ##
@@ -136,9 +91,6 @@
     #junit.debug.jpda=-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y
 
     junit.halt.on.failure=false
-    junit.java.mx=1024m
-    junit.java.maxpermsize=256m
-    junit.test.excludes=(?!)
 
 ##
 ## Libraries
@@ -155,25 +107,16 @@
     os.windows=Windows 95,Windows 98,Windows NT,Windows 2000,Windows 2003,Windows XP,Windows Vista,Windows 7
 
 ##
-## PGP
-##
-
-    pgp.generator=
-    pgp.keyname=auto
-    pgp.passphrase=
-
-##
 ## Plugins
 ##
 
     #
     # Set the excludes and includes attributes. These attributes are read when
-    # you run "ant" from the hooks, layouttpl, portlets, shared, themes, or webs
-    # directory. By default, the ant task will go through every subdirectory.
-    # Setting these attributes can limit it to just the plugins you're working
-    # on.
+    # you run "ant" from the layouttpl, portlets, or themes directory. By
+    # default, the ant task will go through every subdirectory. Setting these
+    # attributes can limit it to just the plugins you're working on.
     #
-    plugins.excludes=elasticsearch-portlet,mentions-portlet,module-admin-portlet
+    plugins.excludes=
     plugins.includes=*
 
     #
@@ -183,20 +126,13 @@
     # generated liferay-portal.ear via the command "ant ear".
     #
     # For example, if you are using Tomcat, then the directory specified in
-    # the property "app.server.tomcat.deploy.dir" will point to
-    # ${app.server.tomcat.dir}/webapps by default. Running "ant ear" will create
-    # an EAR based on all the WARs in that directory with names that match the
-    # excludes and includes from these two properties.
+    # the property "app.server.deploy.dir" will point to
+    # ${app.server.dir}/webapps by default. Running "ant ear" will create an EAR
+    # based on all the WARs in that directory with names that match the excludes
+    # and includes from these two properties.
     #
     plugins.ear.excludes=
     plugins.ear.includes=tunnel-web
-
-    #
-    # Specify the path of the portal servlet context.
-    #
-    # Set this property if you deploy the portal to another path besides root.
-    #
-    plugins.ear.portal.context.path=/
 
     #
     # Set this to true to generate a source ZIP file when creating a plugin WAR
@@ -205,32 +141,10 @@
     plugins.src.zip.enabled=false
 
     #
-    # Set this to true to optimize the size of plugin WAR files by not included
-    # portal dependencies that will can injected at deploy time.
-    #
-    plugins.war.clean.portal.dependencies=true
-
-    #
     # Set the excludes attributes to specify files that will be excluded from a
     # plugin WAR.
     #
     #plugins.war.excludes=**/WEB-INF/service/**,**/WEB-INF/src/**
-
-##
-## Sonatype
-##
-
-    sonatype.release.hostname=repository.liferay.com
-    sonatype.release.password=
-    sonatype.release.realm=Sonatype Nexus Repository Manager
-    sonatype.release.url=https://repository.liferay.com/nexus/content/repositories/liferay-releases-ce
-    sonatype.release.username=
-
-    sonatype.snapshot.hostname=repository.liferay.com
-    sonatype.snapshot.password=
-    sonatype.snapshot.realm=Sonatype Nexus Repository Manager
-    sonatype.snapshot.url=https://repository.liferay.com/nexus/content/repositories/liferay-snapshots-ce
-    sonatype.snapshot.username=
 
 ##
 ## Version
@@ -239,5 +153,5 @@
     #
     # Set the version of Liferay Portal that these plugins are designed for.
     #
-    lp.version=6.2.0
+    lp.version=6.1.1
     lp.version.file.suffix=
