--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,6 @@ language: java
 jdk:
  - openjdk7
 
-#cache:
-# directories:
-#  - liferay
-
 # Get Liferay portal with the GlassFish application server
 before_install: 
  - apt-get install -y xml-commons-apis
@@ -16,26 +12,23 @@ before_install:
  - mkdir -p ${INSTALL_ROOT}/glassfish-3.1.2/autodeploy
  - mkdir -p ${INSTALL_ROOT}/glassfish-3.1.2/domains/domain1/applications/liferay-portal/WEB-INF/lib
  - mkdir -p ${INSTALL_ROOT}/glassfish-3.1.2/domains/domain1/applications/liferay-portal/WEB-INF/tld
- #- unzip -o plugins/liferay-portal-glassfish-6.1.1-ce-ga2-20120731132656558.zip
  - wget http://grid.ct.infn.it/statistics/plugins/liferay-portal-glassfish-6.1.1-ce-ga2-20120731132656558.zip 
  - unzip liferay-portal-glassfish-6.1.1-ce-ga2-20120731132656558.zip
 
 # Install dependencies
-#- tar zxvf plugins/lib.tar.gz -C ${INSTALL_ROOT}/glassfish-3.1.2/domains/domain1/
-- cd ${INSTALL_ROOT}/glassfish-3.1.2/domains/domain1/
-- wget http://grid.ct.infn.it/statistics/plugins/lib.tar.gz
-- tar zxvf lib.tar.gz
-- cd -
+#- cd ${INSTALL_ROOT}/glassfish-3.1.2/domains/domain1/
+#- wget http://grid.ct.infn.it/statistics/plugins/lib.tar.gz
+#- tar zxvf lib.tar.gz
+#- cd -
 
 # Get the SDK and unpack it
- #- unzip -o plugins/liferay-plugins-sdk-6.1.1-ce-ga2-20120731132656558.zip
- - wget http://grid.ct.infn.it/statistics/plugins/liferay-plugins-sdk-6.1.1-ce-ga2-20120731132656558.zip
- - unzip liferay-plugins-sdk-6.1.1-ce-ga2-20120731132656558.zip
- - cp plugins/build.properties liferay-plugins-sdk-6.1.1
- - cd liferay-plugins-sdk-6.1.1/portlets
- - git clone https://github.com/csgf/abinitdm-portlet.git
+# - wget http://grid.ct.infn.it/statistics/plugins/liferay-plugins-sdk-6.1.1-ce-ga2-20120731132656558.zip
+# - unzip liferay-plugins-sdk-6.1.1-ce-ga2-20120731132656558.zip
+# - cp plugins/build.properties liferay-plugins-sdk-6.1.1
+# - cd liferay-plugins-sdk-6.1.1/portlets
+# - git clone https://github.com/csgf/abinitdm-portlet.git
 
 # Building the abinitdm-portlet
-install:
- - cd abinitdm-portlet
- - ant all
+#install:
+# - cd abinitdm-portlet
+# - ant all
