--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,10 @@ before_install:
  - unzip liferay-portal-glassfish-6.1.1-ce-ga2-20120731132656558.zip
 
 # Install dependencies
-#- cd ${INSTALL_ROOT}/glassfish-3.1.2/domains/domain1/
-#- wget http://grid.ct.infn.it/statistics/plugins/lib.tar.gz
-#- tar zxvf lib.tar.gz
-#- cd -
+- cd ${INSTALL_ROOT}/glassfish-3.1.2/domains/domain1/
+- wget http://grid.ct.infn.it/statistics/plugins/lib.tar.gz
+- tar zxvf lib.tar.gz
+- cd -
 
 # Get the SDK and unpack it
 # - wget http://grid.ct.infn.it/statistics/plugins/liferay-plugins-sdk-6.1.1-ce-ga2-20120731132656558.zip
