Added 'before_install' section in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,11 @@ language: java
 
 jdk:
  - openjdk7
+
+# Get Liferay portal with the GlassFish application server
+before_install:
+ - export W_DIR=${PWD}
+ - export INSTALL_ROOT=${HOME}/liferay-portal-6.1.1-ce-ga2
+ - echo "\nINSTALL_ROOT = " + ${INSTALL_ROOT}
+ - echo "\nW_DIR        = " + ${W_DIR}
+
