--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,29 @@ jdk:
  - openjdk7
 
 # Get Liferay portal with the GlassFish application server
-before_install:
+before_install: 
+ - sudo apt-get install -y xml-commons-apis
  - export W_DIR=${PWD}
  - export INSTALL_ROOT=${HOME}/liferay-portal-6.1.1-ce-ga2
- - echo "\nINSTALL_ROOT = " + ${INSTALL_ROOT}
- - echo "\nW_DIR        = " + ${W_DIR}
+ - mkdir -p ${INSTALL_ROOT}/deploy
+ - mkdir -p ${INSTALL_ROOT}/glassfish-3.1.2/autodeploy
+ - mkdir -p ${INSTALL_ROOT}/glassfish-3.1.2/domains/domain1/applications/liferay-portal/WEB-INF/lib
+ - mkdir -p ${INSTALL_ROOT}/glassfish-3.1.2/domains/domain1/applications/liferay-portal/WEB-INF/tld
+ - wget http://grid.ct.infn.it/statistics/plugins/liferay-portal-glassfish-6.1.1-ce-ga2-20120731132656558.zip 
+ - unzip liferay-portal-glassfish-6.1.1-ce-ga2-20120731132656558.zip
+ - pwd
 
+# Install dependencies
+- wget http://grid.ct.infn.it/statistics/plugins/lib.tar.gz
+- tar zxvf lib.tar.gz -C ${INSTALL_ROOT}/glassfish-3.1.2/domains/domain1/
+
+# Get the SDK and unpack it
+ - wget http://grid.ct.infn.it/statistics/plugins/liferay-plugins-sdk-6.1.1-ce-ga2-20120731132656558.zip
+ - unzip liferay-plugins-sdk-6.1.1-ce-ga2-20120731132656558.zip
+ - cp /home/travis/csgf/plugins/build.properties liferay-plugins-sdk-6.1.1
+ - cp -r /home/travis/csgf/abinitdm-portlet/ liferay-plugins-sdk-6.1.1/portlets
+
+# Building the abinitdm-portlet
+install:
+ - cd liferay-plugins-sdk-6.1.1/portlets/abinitdm-portlet
+ - ant all
