removed installation of xml-commons-apis-1.4.01-3

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jdk:
 
 # Get Liferay portal with the GlassFish application server
 before_install: 
- - sudo apt-get install xml-commons-apis
+ #- sudo apt-get install xml-commons-apis
  - export W_DIR=${PWD}
  - export INSTALL_ROOT=${HOME}/liferay-portal-6.1.1-ce-ga2
  - mkdir -p ${INSTALL_ROOT}/deploy
