--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,15 @@ before_install:
  - sudo apt-get update -qq
  - export W_DIR=${PWD}
  - export INSTALL_ROOT=${HOME}/liferay-portal-6.1.1-ce-ga2
+# - echo "Working dir = $W_DIR"
+# - echo $INSTALL_ROOT
+ - env
  - mkdir -p ${INSTALL_ROOT}/deploy
  - mkdir -p ${INSTALL_ROOT}/glassfish-3.1.2/autodeploy
  - mkdir -p ${INSTALL_ROOT}/glassfish-3.1.2/domains/domain1/applications/liferay-portal/WEB-INF/lib
  - mkdir -p ${INSTALL_ROOT}/glassfish-3.1.2/domains/domain1/applications/liferay-portal/WEB-INF/tld
  - wget http://grid.ct.infn.it/statistics/plugins/liferay-portal-glassfish-6.1.1-ce-ga2-20120731132656558.zip 
  - unzip liferay-portal-glassfish-6.1.1-ce-ga2-20120731132656558.zip
- - echo "Working dir = $W_DIR"
- - echo $INSTALL_ROOT
 
 # Install dependencies
 #- wget http://grid.ct.infn.it/statistics/plugins/lib.tar.gz
