--- a/.travis.yml
+++ b/.travis.yml
@@ -16,20 +16,23 @@ before_install:
  - cd ${HOME}
 
 # Get Liferay portal with the GlassFish application server
- - wget http://grid.ct.infn.it/statistics/plugins/liferay-portal-glassfish-6.1.1-ce-ga2-20120731132656558.zip 
- - unzip liferay-portal-glassfish-6.1.1-ce-ga2-20120731132656558.zip
+# - wget http://grid.ct.infn.it/statistics/plugins/liferay-portal-glassfish-6.1.1-ce-ga2-20120731132656558.zip 
+# - unzip liferay-portal-glassfish-6.1.1-ce-ga2-20120731132656558.zip
 
 # Install dependencies
-- wget http://grid.ct.infn.it/statistics/plugins/lib.tar.gz
-- tar zxvf lib.tar.gz -C ${INSTALL_ROOT}/glassfish-3.1.2/domains/domain1/
+#- wget http://grid.ct.infn.it/statistics/plugins/lib.tar.gz
+#- tar zxvf lib.tar.gz -C ${INSTALL_ROOT}/glassfish-3.1.2/domains/domain1/
 
 # Get the SDK and unpack it
- - wget http://grid.ct.infn.it/statistics/plugins/liferay-plugins-sdk-6.1.1-ce-ga2-20120731132656558.zip
- - unzip liferay-plugins-sdk-6.1.1-ce-ga2-20120731132656558.zip
+# - wget http://grid.ct.infn.it/statistics/plugins/liferay-plugins-sdk-6.1.1-ce-ga2-20120731132656558.zip
+# - unzip liferay-plugins-sdk-6.1.1-ce-ga2-20120731132656558.zip
 
 # Get the build.properties
- - wget http://grid.ct.infn.it/statistics/plugins/build.properties
- - cp build.properties liferay-plugins-sdk-6.1.1
+# - wget http://grid.ct.infn.it/statistics/plugins/build.properties
+# - cp build.properties liferay-plugins-sdk-6.1.1
+
+
+
 # - cp -r /home/travis/csgf/abinitdm-portlet/ liferay-plugins-sdk-6.1.1/portlets
 
 # Building the abinitdm-portlet
