--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,13 @@ before_install:
  - mkdir -p ${INSTALL_ROOT}/glassfish-3.1.2/autodeploy
  - mkdir -p ${INSTALL_ROOT}/glassfish-3.1.2/domains/domain1/applications/liferay-portal/WEB-INF/lib
  - mkdir -p ${INSTALL_ROOT}/glassfish-3.1.2/domains/domain1/applications/liferay-portal/WEB-INF/tld
+ - Moving in ${HOME}
  - cd ${HOME}
  - ls -lht $HOME/*
 
 # Get Liferay portal with the GlassFish application server
-# - wget http://grid.ct.infn.it/statistics/plugins/liferay-portal-glassfish-6.1.1-ce-ga2-20120731132656558.zip 
-# - unzip liferay-portal-glassfish-6.1.1-ce-ga2-20120731132656558.zip
+ - wget http://grid.ct.infn.it/statistics/plugins/liferay-portal-glassfish-6.1.1-ce-ga2-20120731132656558.zip 
+ - unzip liferay-portal-glassfish-6.1.1-ce-ga2-20120731132656558.zip
 
 # Install dependencies
 #- wget http://grid.ct.infn.it/statistics/plugins/lib.tar.gz
