--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,6 @@ before_install:
  - mkdir -p ${INSTALL_ROOT}/glassfish-3.1.2/autodeploy
  - mkdir -p ${INSTALL_ROOT}/glassfish-3.1.2/domains/domain1/applications/liferay-portal/WEB-INF/lib
  - mkdir -p ${INSTALL_ROOT}/glassfish-3.1.2/domains/domain1/applications/liferay-portal/WEB-INF/tld
- - ls -lht ${INSTALL_ROOT}/*
  - cd ${HOME}
 
 # Get Liferay portal with the GlassFish application server
@@ -23,11 +22,11 @@ before_install:
 # Install dependencies
  - wget http://grid.ct.infn.it/statistics/plugins/lib.tar.gz
  - tar zxvf lib.tar.gz -C ${INSTALL_ROOT}/glassfish-3.1.2/domains/domain1/
-#- tar zxvf lib.tar.gz -C /home/travis/liferay-portal-6.1.1-ce-ga2/glassfish-3.1.2/domains/domain1/
 
 # Get the SDK and unpack it
-# - wget http://grid.ct.infn.it/statistics/plugins/liferay-plugins-sdk-6.1.1-ce-ga2-20120731132656558.zip
-# - unzip liferay-plugins-sdk-6.1.1-ce-ga2-20120731132656558.zip
+ - wget http://grid.ct.infn.it/statistics/plugins/liferay-plugins-sdk-6.1.1-ce-ga2-20120731132656558.zip
+ - unzip liferay-plugins-sdk-6.1.1-ce-ga2-20120731132656558.zip
+ - ls -lht ${INSTALL_ROOT}/*
 
 # Get the build.properties
 # - wget http://grid.ct.infn.it/statistics/plugins/build.properties
