--- a/.travis.yml
+++ b/.travis.yml
@@ -29,12 +29,9 @@ before_install:
  - ls -lht ${INSTALL_ROOT}/*
 
 # Get the build.properties
-# - wget http://grid.ct.infn.it/statistics/plugins/build.properties
-# - cp build.properties liferay-plugins-sdk-6.1.1
-
-
-
-# - cp -r /home/travis/csgf/abinitdm-portlet/ liferay-plugins-sdk-6.1.1/portlets
+ - wget http://grid.ct.infn.it/statistics/plugins/build.properties
+ - cp build.properties liferay-plugins-sdk-6.1.1
+ - cp -r /home/travis/csgf/abinitdm-portlet/ liferay-plugins-sdk-6.1.1/portlets
 
 # Building the abinitdm-portlet
 #install:
