--- a/.travis.yml
+++ b/.travis.yml
@@ -36,4 +36,4 @@ before_install:
 # Building the abinitdm-portlet
 install:
  - cd liferay-plugins-sdk-6.1.1/portlets/abinitdm-portlet
- - ant all
+ - sudo ant all
