--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ before_install:
  - wget http://grid.ct.infn.it/statistics/plugins/build.properties
  - cp build.properties liferay-plugins-sdk-6.1.1
  - cp -r ${PORTLET} liferay-plugins-sdk-6.1.1/portlets
+ - locate ecj.jar
 
 # Building the abinitdm-portlet
 install:
