check /usr/java/apache-ant-1.8.2/

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,8 @@ before_install:
 
 # Get the ecj.jar
  - wget http://grid.ct.infn.it/statistics/ecj.jar
- - cp ecj.jar /usr/java/apache-ant-1.8.2/lib/
+ - ls -lht /usr/java/apache-ant-1.8.2/*
+ - sudo cp ecj.jar /usr/java/apache-ant-1.8.2/lib/
 
 # Building the abinitdm-portlet
 install:
