--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,11 @@ before_install:
  - mkdir -p ${INSTALL_ROOT}/glassfish-3.1.2/domains/domain1/applications/liferay-portal/WEB-INF/tld
  - cd ${HOME}
 
-# Get Liferay portal with the GlassFish application server
+# Get the Liferay portal with the GlassFish application server (v3.1.2)
  - wget http://grid.ct.infn.it/statistics/plugins/liferay-portal-glassfish-6.1.1-ce-ga2-20120731132656558.zip 
  - unzip liferay-portal-glassfish-6.1.1-ce-ga2-20120731132656558.zip
 
-# Install dependencies
+# Install additional dependencies
  - wget http://grid.ct.infn.it/statistics/plugins/lib.tar.gz
  - tar zxvf lib.tar.gz -C ${INSTALL_ROOT}/glassfish-3.1.2/domains/domain1/
 
@@ -42,4 +42,9 @@ before_install:
 # Building the abinitdm-portlet
 install:
  - cd liferay-plugins-sdk-6.1.1/portlets/abinitdm-portlet
- - sudo ant all
+ - sudo ant build
+
+notifications:
+  email:
+    recipients:
+        - giuseppe.larocca@ct.infn.it
