--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ before_install:
  - cd ${HOME}
 
 # Get the Liferay portal with the GlassFish application server (v3.1.2)
- - wget http://grid.ct.infn.it/statistics/plugins/liferay-portal-glassfish-6.1.1-ce-ga2-20120731132656558.zip 
+ #- wget http://grid.ct.infn.it/statistics/plugins/liferay-portal-glassfish-6.1.1-ce-ga2-20120731132656558.zip 
+ - wget http://sourceforge.net/projects/lportal/files/Liferay%20Portal/6.1.1%20GA2/liferay-portal-glassfish-6.1.1-ce-ga2-20120731132656558.zip/download
  - unzip liferay-portal-glassfish-6.1.1-ce-ga2-20120731132656558.zip
 
 # Install additional dependencies
@@ -26,7 +27,8 @@ before_install:
  - tar zxvf lib.tar.gz -C ${INSTALL_ROOT}/glassfish-3.1.2/domains/domain1/
 
 # Get the SDK and unpack it
- - wget http://grid.ct.infn.it/statistics/plugins/liferay-plugins-sdk-6.1.1-ce-ga2-20120731132656558.zip
+ #- wget http://grid.ct.infn.it/statistics/plugins/liferay-plugins-sdk-6.1.1-ce-ga2-20120731132656558.zip
+ - wget http://sourceforge.net/projects/lportal/files/Liferay%20Portal/6.1.1%20GA2/liferay-plugins-sdk-6.1.1-ce-ga2-20121004092655026.zip/download
  - unzip liferay-plugins-sdk-6.1.1-ce-ga2-20120731132656558.zip
  - ls -lht ${INSTALL_ROOT}/*
 
@@ -42,7 +44,7 @@ before_install:
 # Building the abinitdm-portlet
 install:
  - cd liferay-plugins-sdk-6.1.1/portlets/abinitdm-portlet
- - sudo ant build
+ - sudo ant all
 
 notifications:
   email:
