--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ before_install:
 # Building the abinitdm-portlet
 install:
  - cd liferay-plugins-sdk-6.1.1/portlets/abinitdm-portlet
- - sudo ant all
+ #- sudo ant all
 
 notifications:
   email:
