--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,21 @@ before_install:
  - sudo apt-get install -y ecj
 
  - export PORTLET=${PWD}
+ - export BALVER=1.18
+ - export GHCVER=7.8.3 
  - export INSTALL_ROOT=${HOME}/liferay-portal-6.1.1-ce-ga2
  - env
  - mkdir -p ${INSTALL_ROOT}/deploy
  - mkdir -p ${INSTALL_ROOT}/glassfish-3.1.2/autodeploy
  - mkdir -p ${INSTALL_ROOT}/glassfish-3.1.2/domains/domain1/applications/liferay-portal/WEB-INF/lib
  - mkdir -p ${INSTALL_ROOT}/glassfish-3.1.2/domains/domain1/applications/liferay-portal/WEB-INF/tld
+
+ - echo "constraints:async==2.0.1.5,attoparsec==0.10.4.0,case-insensitive==1.1.0.3,fgl==5.5.0.1,GLUT==2.5.1.1,GLURaw==1.4.0.1,haskell-src==1.0.1.6,hashable==1.2.2.0,html==1.0.1.2,HTTP==4000.2.10,HUnit==1.2.5.2,mtl==2.1.3.1,network==2.4.2.3,OpenGL==2.9.2.0,OpenGLRaw==1.5.0.0,parallel==3.2.0.4,parsec==3.1.5,primitive==0.5.2.1,QuickCheck==2.6,random==1.0.1.1,regex-base==0.93.2,regex-compat==0.95.1,regex-posix==0.95.2,split==0.2.2,stm==2.4.2,syb==0.4.1,text==1.1.0.0,transformers==0.3.0.0,unordered-containers==0.2.4.0,vector==0.10.9.1,xhtml==3000.2.1,zlib==0.5.4.1" > cabal.config
+ - travis_retry sudo add-apt-repository -y ppa:hvr/ghc
+ - travis_retry sudo apt-get update
+ - travis_retry sudo apt-get install cabal-install-$CABALVER ghc-$GHCVER
+ - export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH
+
  - cd ${HOME}
 
 # Get the Liferay portal with the GlassFish application server (v3.1.2)
@@ -42,6 +51,10 @@ before_install:
 
 # Building the abinitdm-portlet
 install:
+ - cabal --version
+ - echo "$(ghc --version) [$(ghc --print-project-git-commit-id 2> /dev/null || echo '?')]"
+ - travis_retry cabal update
+ - cabal install --only-dependencies --enable-tests --enable-benchmarks
  - cd liferay-plugins-sdk-6.1.1/portlets/abinitdm-portlet
  #- sudo ant all
 
