--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_install:
  - sudo apt-get update -qq
  - sudo apt-get install -y ant
  - sudo apt-get install -y ecj
+ - sudo apt-get install -y cabal-install
 
  - export PORTLET=${PWD}
  - export BALVER=1.18
@@ -55,6 +56,7 @@ install:
  - echo "$(ghc --version) [$(ghc --print-project-git-commit-id 2> /dev/null || echo '?')]"
  - travis_retry cabal update
  - cabal install --only-dependencies --enable-tests --enable-benchmarks
+ 
  - cd liferay-plugins-sdk-6.1.1/portlets/abinitdm-portlet
  #- sudo ant all
 
